Stops now hidden on load. zooming in past z14 makes them visible.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,6 +21,9 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+.leaflet-control-layers.leaflet-control {
+  display: none;
+}
 .scroll, .angular-leaflet-map {
   height: 100%;
 }
